# MusicStreamingV2

./: .env.example  .gitignore  INFRA.md  MP3_INGESTION_GUIDE.md  README.md  TODOS.md  disclaimer.txt  docker-compose.efk.yml  docker-compose.integration.yml  docker-compose.tmp.yml  docker-compose.yml  go.work  go.work.sum
bandit_system/: .env.example  .gitignore  BANDIT.md  Dockerfile  main.py  pyproject.toml
bandit_system/cmd/: main.py
bandit_system/entrypoint/: main.py
bandit_system/src/: thompson.py
bandit_system/src/app/: __init__.py  helpers.py  models.py  routes.py  state.py
bandit_system/src/dependencies/: config.py  db.py
bandit_system/src/di/: config.py  db.py
bandit_system/src/handlers/: bandit.py
bandit_system/src/middleware/: __init__.py  auth.py  logging.py  request_id.py
bandit_system/src/models/: linucb.py  thompson.py
bandit_system/src/sql/: 01_bandits.sql
bandit_system/tests/: test_routes.py
services/service_bandit_system/: .env.example  API.md  BANDIT.md  Dockerfile  Dockerfile.integration.test  docker-compose.integration.yml  logging.json  main.py  pyproject.toml
services/service_bandit_system/src/: metrics.py
services/service_bandit_system/src/app/: helpers.py  routes.py  state.py
services/service_bandit_system/src/cache/: themes.py
services/service_bandit_system/src/di/: config.py  db.py
services/service_bandit_system/src/middleware/: __init__.py  metrics.py  request_id.py
services/service_bandit_system/src/services/: bandit.py
services/service_bandit_system/tests/: __init__.py  conftest.py  test_linucb.py
(+561 files in other folders)
