[project]
name = "bandit-system"
version = "0.1.0"
description = "LinUCB contextual bandit for personalized music theme recommendations"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "clickhouse-sqlalchemy>=0.3.2",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.0.0",
    "sqlalchemy>=2.0.46",
    "structlog>=25.5.0",
    "typing>=3.10.0.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-mock>=3.15.0",
    "ruff>=0.8.0",
]
